--- a/package.json
+++ b/package.json
@@ -10,17 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@mui/lab": "^5.0.0-alpha.145",
-    "@mui/material": "^5.14.10",
-    "@mui/x-data-grid": "^6.14.0",
-    "axios": "^1.5.0",
+    "antd": "^5.9.4",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "sweetalert2": "^11.7.28",
     "yup": "^1.2.0"
   },
   "devDependencies": {
